Some cleanup, dark mode, WIP player name on home form

--- a/Components/GameUi.razor
+++ b/Components/GameUi.razor
@@ -53,8 +53,8 @@
     </div>
     <div class="self-center py-4">
         <div class="text-center">
-            <button @onclick="ShowVotes" class="py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md bg-gray-100 border border-transparent font-semibold text-gray-800 hover:text-white hover:bg-gray-800 focus:outline-none focus:ring-2 ring-offset-white focus:ring-gray-800 focus:ring-offset-2 transition-all text-sm dark:bg-gray-700 dark:hover:bg-gray-900 dark:text-white">Show votes</button>
-            <button @onclick="ClearVotes" class="py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md bg-gray-100 border border-transparent font-semibold text-gray-800 hover:text-white hover:bg-gray-800 focus:outline-none focus:ring-2 ring-offset-white focus:ring-gray-800 focus:ring-offset-2 transition-all text-sm dark:bg-gray-700 dark:hover:bg-gray-900 dark:text-white">Clear votes</button>
+            <FatButton OnClick="ShowVotes">Show votes</FatButton>
+            <FatButton OnClick="ClearVotes">Clear votes</FatButton>
         </div>
     </div>
     <div>
