--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,7 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<main>
+<main class="text-gray-800 dark:text-white">
     <article class="container mx-auto px-4">
+        <div class="float-right text-xs uppercase font-medium leading-7"><a href="/" class="text-gray-800 dark:text-gray-400">Home</a></div>
         @Body
     </article>
 </main>
