--- a/Components/VoteButton.razor
+++ b/Components/VoteButton.razor
@@ -46,7 +46,7 @@
                 Color switch {
                     ButtonColor.Blue => "dark:focus:ring-offset-gray-800",
                     ButtonColor.Indigo => "dark:focus:ring-offset-gray-800",
-                    ButtonColor.Gray =>"dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-offset-gray-800"});
+                    ButtonColor.Gray =>"dark:bg-gray-700 dark:focus:ring-offset-gray-800"});
         }
 
         return str.ToString();
