--- a/Components/App.razor
+++ b/Components/App.razor
@@ -13,9 +13,10 @@
     <HeadOutlet />
 </head>
 
-<body>
+<body class="bg-gray-50 dark:bg-gray-800">
 <Routes />
 <script src="_framework/blazor.web.js"></script>
+<script src="/app.js"></script>
 </body>
 
 </html>
