Restructure code, add logo

--- a/Components/GameUi.razor
+++ b/Components/GameUi.razor
@@ -1,5 +1,5 @@
-@using PointingParty.Events
-@using MassTransit
+@using PointingParty.Domain
+@using PointingParty.Infrastructure
 @attribute [RenderModeServer]
 @inject GameContext GameContext
 
