--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,8 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
 <main class="text-gray-800 dark:text-white">
-    <article class="container mx-auto px-4">
-        <div class="float-right text-xs uppercase font-medium leading-7"><a href="/" class="text-gray-800 dark:text-gray-400">Home</a></div>
+    <article class="container max-w-[85rem] mx-auto px-4">
+        <div class="float-right text-xs uppercase font-medium leading-7">
+            <a href="/" class="text-gray-800 dark:hidden">
+                <img src="/pointpingparty-cactus-light.svg" alt="Pointing Party" style="height: 1.75rem;" />
+            </a>
+            <a href="/" class="text-gray-400 hidden dark:block">
+                <img src="/pointpingparty-cactus-dark.svg" alt="Pointing Party" style="height: 1.75rem;" />
+            </a>
+        </div>
         @Body
     </article>
 </main>
