--- a/Components/Pages/Game.razor
+++ b/Components/Pages/Game.razor
@@ -3,14 +3,14 @@
 @inject IJSRuntime JSRuntime
 @attribute [RenderModeServer]
 
-<PageTitle>Pointing 🎉 @GameId</PageTitle>
+<PageTitle>@GameId Pointing Party</PageTitle>
 
-<h2 class="text-xl my-2">Pointing Party: @GameId</h2>
+<h2 class="text-xl my-2"><span class="hidden md:inline">Pointing Party: </span>@GameId</h2>
 
 @if (_inGame)
 {
     <GameUi GameId="@GameId" PlayerName="@GameAndName.Name" />
-    
+
     <div class="text-center text-xs font-medium text-gray-800 dark:text-gray-400">
         To invite participants, simply send them the link to this page!
     </div>
@@ -51,7 +51,7 @@ else
 
     [SupplyParameterFromQuery]
     public string? PlayerName { get; set; }
-    
+
     private void EnterGame()
     {
         _inGame = true;
