Clean up, remove unused event Id field

--- a/Components/Pages/Game.razor
+++ b/Components/Pages/Game.razor
@@ -5,7 +5,9 @@
 
 <PageTitle>@GameId Pointing Party</PageTitle>
 
-<h2 class="text-xl my-2"><span class="hidden md:inline">Pointing Party: </span>@GameId</h2>
+<h2 class="text-xl my-2">
+    <span class="hidden md:inline">Pointing Party: </span>@GameId
+</h2>
 
 @if (_inGame)
 {
