--- a/Components/GameUi.razor
+++ b/Components/GameUi.razor
@@ -32,12 +32,12 @@
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Vote</th>
             </thead>
             <tbody>
-            @foreach (var (player, vote) in GameContext.Game.State.PlayerVotes)
+            @foreach (var (player, vote) in _game.State.PlayerVotes)
             {
                 <tr>
                     <td class="px-6 py-4 whitespace-nowrap text-gray-800 dark:text-gray-200">@player</td>
                     <td class="px-6 py-4 whitespace-nowrap text-gray-800 dark:text-gray-200">
-                        @if (vote.Status != VoteStatus.Pending && player != PlayerName && !GameContext.Game.State.ShowVotes)
+                        @if (vote.Status != VoteStatus.Pending && player != PlayerName && !_game.State.ShowVotes)
                         {
                             <span>Voted!</span>
                         }
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div>
-        @if (GameContext.Game.State.ShowVotes)
+        @if (_game.State.ShowVotes)
         {
             <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
                 <thead>
@@ -66,7 +66,7 @@
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Frequency</th>
                 </thead>
                 <tbody>
-                @foreach (var group in GameContext.Game.State.PlayerVotes.GroupBy(x => x.Value))
+                @foreach (var group in _game.State.PlayerVotes.GroupBy(x => x.Value))
                 {
                     <tr>
                         <td class="px-6 py-4 whitespace-nowrap text-gray-800 dark:text-gray-200">@group.Key</td>
@@ -82,7 +82,7 @@
                     Average score:
                 </span>
                 <span class="text-gray-800 dark:text-gray-200">
-                    @GameContext.Game.State.PlayerVotes.Average(x => x.Value.Score)
+                    @_game.State.PlayerVotes.Average(x => x.Value.Score)
                 </span>
             </div>
         }
@@ -98,24 +98,23 @@
 @code {
 
     [Parameter]
-    public string GameId { get; set; }
+    public string GameId { get; set; } = "";
 
     [Parameter]
-    public string PlayerName { get; set; }
+    public string PlayerName { get; set; } = "";
 
     private Vote _myVote;
+    private GameAggregate _game = default!;
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
-        await GameContext.Start(GameId, PlayerName);
-        GameContext.OnStateChange += HandleGameEvent;
-        await base.OnInitializedAsync();
+        _game = GameContext.Start(GameId, PlayerName, HandleGameEvent);
     }
 
     private void HandleGameEvent(bool gameWasReset)
     {
         if (gameWasReset) _myVote = new Vote();
-        InvokeAsync(StateHasChanged); // todo await
+        InvokeAsync(StateHasChanged);
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
