--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Pointing Party</PageTitle>
 
-<h2 class="text-xl my-2">Welcome to Pointing Party!</h2>
+<h2 class="text-xl my-2 leading-8">Welcome to Pointing Party!</h2>
 
 <p class="mb-2">
     This Blazor-powered tool can help story point estimation sessions. Choose a name for the game below
