--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -2,12 +2,12 @@
 
 <main class="text-gray-800 dark:text-white">
     <article class="container max-w-[85rem] mx-auto px-4">
-        <div class="float-right text-xs uppercase font-medium leading-7">
+        <div class="float-right text-xs uppercase font-medium leading-8">
             <a href="/" class="text-gray-800 dark:hidden">
-                <img src="/pointpingparty-cactus-light.svg" alt="Pointing Party" style="height: 1.75rem;" />
+                <img src="/pointpingparty-cactus-light.svg" alt="Pointing Party" class="h-8" />
             </a>
             <a href="/" class="text-gray-400 hidden dark:block">
-                <img src="/pointpingparty-cactus-dark.svg" alt="Pointing Party" style="height: 1.75rem;" />
+                <img src="/pointpingparty-cactus-dark.svg" alt="Pointing Party" class="h-8" />
             </a>
         </div>
         @Body
