Update to .NET 8 rc2, new domain

--- a/Components/Pages/Game.razor
+++ b/Components/Pages/Game.razor
@@ -1,7 +1,7 @@
 @page "/Game/{gameId}"
 @using System.ComponentModel.DataAnnotations
 @inject IJSRuntime JSRuntime
-@attribute [RenderModeServer]
+@rendermode InteractiveServer
 
 <PageTitle>@GameId Pointing Party</PageTitle>
 
