--- a/Components/GameUi.razor
+++ b/Components/GameUi.razor
@@ -1,6 +1,6 @@
 @using PointingParty.Domain
 @using PointingParty.Infrastructure
-@attribute [RenderModeServer]
+@rendermode InteractiveServer
 @inject GameContext GameContext
 
 <h3 class="text-lg mb-2 text-center">
