--- a/Components/GameUi.razor
+++ b/Components/GameUi.razor
@@ -32,7 +32,7 @@
             <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase">Vote</th>
             </thead>
             <tbody>
-            @foreach (var (player, vote) in _game.State.PlayerVotes)
+            @foreach (var (player, vote) in _game.State.PlayerVotes.OrderBy(x => x.Key))
             {
                 <tr>
                     <td class="px-6 py-3 whitespace-nowrap text-gray-800 dark:text-gray-200">@player</td>
@@ -66,7 +66,7 @@
                 <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase">Frequency</th>
                 </thead>
                 <tbody>
-                @foreach (var group in _game.State.PlayerVotes.GroupBy(x => x.Value))
+                @foreach (var group in _game.State.PlayerVotes.GroupBy(x => x.Value).OrderBy(g => g.Key))
                 {
                     <tr>
                         <td class="px-6 py-3 whitespace-nowrap text-gray-800 dark:text-gray-200">@group.Key</td>
