Layout and style tweaks

--- a/Components/GameUi.razor
+++ b/Components/GameUi.razor
@@ -88,8 +88,10 @@
         }
         else
         {
-            <div class="mb-2 text-xs font-medium text-gray-500 uppercase">
-                Click 'Show votes' to see results
+            <div class="self-center">
+                <div class="mb-2 text-xs font-medium text-gray-500 uppercase text-center">
+                    Click 'Show votes' to see results
+                </div>
             </div>
         }
     </div>
