--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -1,13 +1,9 @@
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
 h1:focus {
     outline: none;
 }
 
 a, .btn-link {
-    color: #0071c1;
+    font-weight: 500;
 }
 
 .btn-primary {
