--- a/Components/Pages/Game.razor
+++ b/Components/Pages/Game.razor
@@ -12,10 +12,6 @@
 @if (_inGame)
 {
     <GameUi GameId="@GameId" PlayerName="@GameAndName.Name" />
-
-    <div class="text-center text-xs font-medium text-gray-800 dark:text-gray-400">
-        To invite participants, simply send them the link to this page!
-    </div>
 }
 else
 {
@@ -26,7 +22,7 @@ else
                 <span class="text-xs font-medium text-gray-500 uppercase">
                     Your name:
                 </span>
-                <InputText @bind-Value="GameAndName.Name" class="py-3 px-4 block w-full border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400" />
+                <InputText @bind-Value="GameAndName.Name" placeholder="Player Name" class="py-3 px-4 block w-full border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400" />
             </label>
         </div>
         <div>
@@ -34,6 +30,11 @@ else
         </div>
     </EditForm>
 }
+
+<div class="text-center text-xs mt-2 md:mt-4">
+    <span class="text-gray-500">To invite participants, send them this link:</span><br/>
+    <span class="font-medium"><a href="https://pointingparty.com/Game/@Uri.EscapeDataString(GameId)">pointingparty.com/Game/@Uri.EscapeDataString(GameId)</a></span>
+</div>
 
 @code {
 
@@ -69,8 +70,8 @@ else
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (!firstRender) return;
-        await JSRuntime.InvokeVoidAsync("window.replaceURL", $"/Game/{GameId}");
+        if (!string.IsNullOrWhiteSpace(PlayerName))
+            await JSRuntime.InvokeVoidAsync("window.replaceURL", $"/Game/{GameId}");
     }
 
 }
