More layout tweaks

--- a/Components/Pages/Game.razor
+++ b/Components/Pages/Game.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>@GameId Pointing Party</PageTitle>
 
-<h2 class="text-xl my-2 leading-8">
+<h2 class="text-xl my-2 leading-8 md:mb-4">
     <span class="hidden md:inline">Pointing Party: </span>@GameId
 </h2>
 
