--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Pointing Party</PageTitle>
 
-<h2 class="text-xl my-2 leading-8">Welcome to Pointing Party!</h2>
+<h2 class="text-xl my-2 leading-8 md:mb-4">Welcome to Pointing Party!</h2>
 
 <p class="mt-4 mb-2">
     Pointing Party enables efficient agile story point estimation ceremonies. To get started, pick a name
@@ -38,7 +38,7 @@
             </label>
         </div>
         <div class="my-2 text-center md:text-left">
-            <FatButton type="submit">Start a new game</FatButton>
+            <FatButton type="submit">Start game</FatButton>
         </div>
     </EditForm>
 </div>
