--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <main class="text-gray-800 dark:text-white">
     <article class="max-w-6xl mx-auto px-4">
-        <div class="float-right text-xs uppercase font-medium leading-8 mb-2 md:mb-4">
+        <div class="float-right text-xs uppercase font-medium leading-8">
             <a href="/" class="text-gray-800 dark:hidden">
                 <img src="/pointpingparty-cactus-light.svg" alt="Pointing Party" class="h-8" />
             </a>
