--- a/Components/App.razor
+++ b/Components/App.razor
@@ -5,10 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <base href="/" />
-    <link rel="stylesheet" href="app.css" />
-    <!-- <link rel="stylesheet" href="PointingParty.styles.css" /> -->
+    <link rel="stylesheet" href="app.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <script src="https://cdn.tailwindcss.com"></script>
 
     <HeadOutlet />
 </head>
