--- a/Components/GameUi.razor
+++ b/Components/GameUi.razor
@@ -77,14 +77,17 @@
                 }
                 </tbody>
             </table>
-            <div class="mb-2">
-                <span class="text-xs font-medium text-gray-500 uppercase">
-                    Average score:
-                </span>
-                <span class="text-gray-800 dark:text-gray-200" data-testid="average">
-                    @Math.Round(AverageScore, 2)
-                </span>
-            </div>
+            if (AverageScore() != default)
+            {
+                <div class="mb-2">
+                    <span class="text-xs font-medium text-gray-500 uppercase">
+                        Average score:
+                    </span>
+                    <span class="text-gray-800 dark:text-gray-200" data-testid="average">
+                        @Math.Round(AverageScore(), 2)
+                    </span>
+                </div>
+            }
         }
         else
         {
@@ -150,7 +153,13 @@
         GameContext.PublishEvents();
     }
 
-    private double AverageScore =>
-        _game.State.PlayerVotes.Where(x => x.Value.Status == VoteStatus.Scored).Average(x => x.Value.Score);
+    private double AverageScore()
+    {
+        var scoredVotes = _game.State.PlayerVotes
+            .Where(x => x.Value.Status == VoteStatus.Scored)
+            .Select(x => x.Value.Score)
+            .ToList();
+        return scoredVotes.Any() ? scoredVotes.Average() : default;
+    }
 
 }
