--- a/Components/Pages/Game.razor
+++ b/Components/Pages/Game.razor
@@ -32,14 +32,16 @@ else
 }
 
 <div class="text-center text-xs mt-2 md:mt-4">
-    <span class="text-gray-500">To invite participants, send them this link:</span><br/>
-    <span class="font-medium"><a href="https://pointingparty.com/Game/@Uri.EscapeDataString(GameId)">pointingparty.com/Game/@Uri.EscapeDataString(GameId)</a></span>
+    <span class="text-gray-500">To invite participants, send them this link:</span><br />
+    <span class="font-medium">
+        <a href="https://pointingparty.com/Game/@Uri.EscapeDataString(GameId)">pointingparty.com/Game/@Uri.EscapeDataString(GameId)</a>
+    </span>
 </div>
 
 @code {
 
     [Parameter]
-    public string? GameId { get; set; }
+    public string GameId { get; set; } = string.Empty;
 
     private bool _inGame;
 
